--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "The Most advanced and user friendly point of sale",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc -p . && node dist/index.js",
+    "dev": "nodemon src/index.ts"
+  },
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.12.0"
   },
   "repository": {
     "type": "git",
@@ -18,5 +23,24 @@
   "bugs": {
     "url": "https://gitlab.com/emeraldit/eit-pos-backend/issues"
   },
-  "homepage": "https://gitlab.com/emeraldit/eit-pos-backend#readme"
+  "homepage": "https://gitlab.com/emeraldit/eit-pos-backend#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql2": "^2.0.1",
+    "sequelize": "^5.21.2",
+    "sequelize-typescript": "^1.0.0",
+    "sqlite3": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.5.29",
+    "@types/express": "^4.17.2",
+    "@types/mysql2": "github:types/mysql2",
+    "@types/node": "^12.12.8",
+    "@types/sqlite3": "^3.1.5",
+    "@types/validator": "^10.11.3",
+    "nodemon": "^1.19.4",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
+  }
 }
