--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://gitlab.com/emeraldit/eit-pos-backend#readme",
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "mysql2": "^2.0.1",
     "sequelize": "^5.21.2",
     "sequelize-typescript": "^1.0.0",
@@ -34,6 +36,9 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.29",
     "@types/express": "^4.17.2",
+    "@types/hapi__joi": "^16.0.3",
+    "@types/joi": "^14.3.4",
+    "@types/morgan": "^1.7.37",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.12.8",
     "@types/sqlite3": "^3.1.5",
