--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "The Most advanced and user friendly point of sale",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -p . && node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "prestart": "npm run build",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p ."
   },
   "engines": {
     "node": "12.13.0",
