--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "mysql2": "^2.0.1",
     "sequelize": "^5.21.2",
     "sequelize-typescript": "^1.0.0",
-    "sqlite3": "^4.1.0",
-    "typescript": "^3.7.2"
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.29",
@@ -48,6 +47,7 @@
     "@types/validator": "^10.11.3",
     "nodemon": "^1.19.4",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.5.2"
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   }
 }
