--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "The Most advanced and user friendly point of sale",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm run build",
+    "predeploy": "npm run build",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "deploy": "git push heroku"
   },
   "engines": {
     "node": "12.13.0",
