--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://gitlab.com/emeraldit/eit-pos-backend#readme",
   "dependencies": {
     "@hapi/joi": "^16.1.7",
+    "@types/jsonwebtoken": "^8.3.7",
     "bcrypt": "^4.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
