--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.7",
     "bcrypt": "^4.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
@@ -46,6 +47,7 @@
     "@types/node": "^12.12.8",
     "@types/sqlite3": "^3.1.5",
     "@types/validator": "^10.11.3",
+    "@types/cors": "^2.8.6",
     "nodemon": "^1.19.4",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
